--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,7 @@
 body {
   background-color: hsl(0, 0%, 83%);
+  margin-top: 50px;
+  text-align: center;
 }
 
 .center {
@@ -32,8 +34,8 @@ body {
   width: 100%;
   height: 0;
   transition: 0.5s ease;
-  text-align: center;
-  max-width: 70%;
+
+  max-width: 60%;
   margin: auto;
   clip-path: circle(60%);
 }
@@ -45,7 +47,6 @@ body {
 
 .text {
   color: hsl(0, 0%, 0%);
-  font-size: 20px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -53,14 +54,11 @@ body {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
-}
-
-h2 {
-  text-align: center;
+  font-size: 1.5vw;
 }
 
 img {
   text-align: center;
-  max-width: 70%;
+  max-width: 60%;
   margin: auto;
 }
